# kon

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  kon.ps1  kon.sh
crates/kon_core/: Cargo.toml  README.md
crates/kon_core/src/: app.rs  context.rs  driver.rs  event.rs  events.rs  lib.rs  plugin.rs  time.rs
crates/kon_ecs/: Cargo.toml  README.md
crates/kon_ecs/src/: entity.rs  ext.rs  lib.rs  plugin.rs  query.rs  storage.rs  world.rs
crates/kon_input/: Cargo.toml  README.md
crates/kon_input/src/: ext.rs  input.rs  lib.rs  plugin.rs
crates/kon_macros/: Cargo.toml  README.md
crates/kon_macros/src/: lib.rs
crates/kon_math/: Cargo.toml
crates/kon_physics/: Cargo.toml
crates/kon_renderer/: Cargo.toml
crates/kon_window/: Cargo.toml  README.md
crates/kon_window/src/: config.rs  driver.rs  ext.rs  lib.rs  plugin.rs  types.rs  window.rs  window_backend.rs
demos/app_demo/: Cargo.toml
demos/app_demo/src/: main.rs
demos/ecs_demo/: Cargo.toml
demos/ecs_demo/lifecycle_demo/: main.rs
demos/ecs_demo/query_demo/: main.rs
demos/ecs_demo/storage_layout_demo/: main.rs
demos/ecs_demo/tag_demo/: main.rs
editor/: Cargo.toml
editor/src/: lib.rs
src/: lib.rs
stress_tests/: bottleneck_test.rs  ecs_stress.rs
