[package]
name = "kon-engine"
version = "0.2.0"
edition = "2024"
authors = ["Ceyhun <ceyhun.yildizz0@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular 2D game engine for Rust, built with a focus on ECS performance and simplicity."
repository = "https://github.com/cey0225/kon"
homepage = "https://github.com/cey0225/kon"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

[lib]
name = "kon"
path = "src/lib.rs"

[dependencies]
kon_core = { version = "0.2.0", path = "crates/kon_core" }
kon_ecs = { version = "0.2.0", path = "crates/kon_ecs" }
kon_macros = { version = "0.2.0", path = "crates/kon_macros" }
kon_window = { version = "0.2.0", path = "crates/kon_window" }
kon_input = { version = "0.2.0", path = "crates/kon_input" }
log = "0.4.29"

[workspace]
resolver = "2"
members = [
    "editor",
    "crates/*",
    "demos/*"
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Ceyhun <ceyhun.yildizz0@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cey0225/kon"
homepage = "https://github.com/cey0225/kon"

[workspace.dependencies]
# --- Logger ---
log = "0.4.29"
env_logger = "0.11.8"

# --- Engine ---
winit = "0.30.12"
wgpu = "28.0.0"
glam = "0.30.9"
pollster = "0.4.0"
quote = "1.0.42"
syn = { version = "2.0.112", features = ["full"] }
proc-macro2 = "1.0.104"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }

# --- Modules ---
kon_core = { version = "0.2.0", path = "crates/kon_core" }
kon_math = { path = "crates/kon_math" }
kon_ecs = { version = "0.2.0", path = "crates/kon_ecs" }
kon_window = { version = "0.2.0", path = "crates/kon_window" }
kon_renderer = { path = "crates/kon_renderer" }
kon_input = { version = "0.2.0", path = "crates/kon_input" }
kon_physics = { path = "crates/kon_physics" }
kon_macros = { version = "0.2.0", path = "crates/kon_macros" }
