[package]
name = "kon_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core internal utilities for the Kon Engine."

[dependencies]
log.workspace = true
env_logger.workspace = true
