[package]
name = "kon_ecs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance SparseSet-based ECS for the Kon Engine."

[dependencies]
log.workspace = true
kon_core.workspace = true
