[package]
name = "kon_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for the Kon Engine."

[lib]
proc-macro = true

[dependencies]
log.workspace = true
kon_core.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
