[package]
name = "kon_window"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Winit-based window management for the Kon Engine."

[dependencies]
log.workspace = true
kon_core.workspace = true
winit.workspace = true
image.workspace = true
